<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        android:id="@+id/back_toolbar"
        layout="@layout/item_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_top_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/items_background"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_toolbar" />

    <ImageView
        android:id="@+id/iv_forecast_second"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/iv_top_background"
        app:layout_constraintTop_toTopOf="@id/iv_top_background"
        app:srcCompat="@drawable/cloudy_sunny" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/country_hint"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="@+id/iv_top_background"
        app:layout_constraintTop_toTopOf="@id/iv_forecast_second"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/tv_degree_secound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/degree_hint"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_country"
        app:layout_constraintStart_toEndOf="@+id/iv_forecast_second"
        app:layout_constraintTop_toBottomOf="@+id/tv_country" />

    <TextView
        android:id="@+id/tv_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/feels_like_msg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_degree_secound"
        app:layout_constraintStart_toStartOf="@+id/tv_degree_secound"
        app:layout_constraintTop_toBottomOf="@+id/tv_degree_secound" />

    <TextView
        android:id="@+id/tv_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="8dp"
        android:text="@string/min_msg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_forecast_second"
        app:layout_constraintTop_toBottomOf="@+id/tv_feels_like" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/max_msg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_country"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_min"
        app:layout_constraintTop_toTopOf="@+id/tv_temp_min" />

    <TextView
        android:id="@+id/tv_sunrise_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sunrise_msg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/iv_forecast_second"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_min" />

    <TextView
        android:id="@+id/tv_sunrise_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sunrise_msg"
        app:layout_constraintStart_toEndOf="@+id/tv_sunrise_msg"
        app:layout_constraintTop_toTopOf="@+id/tv_sunrise_msg"
        tools:text="2" />

    <TextView
        android:id="@+id/tv_sunset_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sunset_msg"
        app:layout_constraintStart_toEndOf="@+id/tv_sunset_msg"
        app:layout_constraintTop_toTopOf="@+id/tv_sunset_msg"
        app:layout_constraintVertical_bias="0.0"
        tools:text="2" />

    <TextView
        android:id="@+id/tv_sunset_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sunset_msg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_temp_min"
        app:layout_constraintTop_toTopOf="@+id/tv_sunrise_msg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sunset_msg"
        tools:listitem="@layout/item_days" />

</androidx.constraintlayout.widget.ConstraintLayout>
