<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/mostly_cloudy_msg"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/cloudy_sunny"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Mon June 17 | 10:00 AM"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_weather"
            app:layout_constraintStart_toStartOf="@+id/iv_weather"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather" />

        <TextView
            android:id="@+id/tv_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="25°"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_datetime"
            app:layout_constraintStart_toStartOf="@+id/tv_datetime"
            app:layout_constraintTop_toBottomOf="@+id/tv_datetime" />

        <TextView
            android:id="@+id/tv_high_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="H:27 L:23"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_degree"
            app:layout_constraintStart_toStartOf="@+id/tv_degree"
            app:layout_constraintTop_toBottomOf="@+id/tv_degree" />

        <LinearLayout
            android:id="@+id/ll_cases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_items"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_high_low">

            <include
                android:id="@+id/card_rain_case"
                layout="@layout/item_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <include
                android:id="@+id/card_wind_case"
                layout="@layout/item_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <include
                android:id="@+id/card_humidity_case"
                layout="@layout/item_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/today_msg"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ll_cases"
            app:layout_constraintTop_toBottomOf="@+id/ll_cases" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/next_msg"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ll_cases"
            app:layout_constraintTop_toTopOf="@+id/tv_today" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forecasts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_next"
            app:layout_constraintStart_toStartOf="@+id/tv_today"
            app:layout_constraintTop_toBottomOf="@+id/tv_next"
            tools:itemCount="1"
            tools:listitem="@layout/item_forecast" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>